2003-12-07  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* regtests/Makefile: Generate regression test registrations.
	* regtests/kmregtests/.cvsignore: Ignore Makefile.tests.
	* regtests/win32base/.cvsignore: Ditto.
	* regtests/kmregtests/Makefile: Include Makefile.tests.
	* regtests/win32base/Makefile: Ditto.
	* regtests/kmregtests/tests: New directory.
	* regtests/win32base/tests: Ditto.
	* regtests/kmregtests/tests/.cvsignore: New file.
	* regtests/win32base/tests/.cvsignore: Ditto.
	* tools/helper.mk: Remove TARGET_GENREGTESTS.
	* tools/regtests.c: Generate makefile for regression tests.
	(change_extension): New function.
	* regtests/win32base/file-1.c: Move ...
	* regtests/win32base/tests/file-1.c: ... here.

2003-12-06  Martin Fuchs  <martin-fuchs@gmx.net>
	* Doxyfile, Makefile: initial doxygen configuration
	* drivers/Doxyfile, drivers/Makefile: Ditto.
	* ntoskrnl/Doxyfile, ntoskrnl/Makefile: Ditto.
	* subsys/win32k/Doxyfile, subsys/win32k/Makefile: Ditto.
	* apps/Doxyfile, apps/Makefile: Ditto.

2003-11-29  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* tools/cabman/dfp.cxx (CDFParser::Parse): Allow TokenString.
	(CDFParser::PerformFileCopy): Use CurrentChar instead of length of
	CurrentString to find the start of the next token.

2003-11-08  Martin Fuchs  <martin-fuchs@gmx.net>

	* controls/button.c partial fix for for Bug #42:
	activate Ansi window procedures for standard controls
	* controls/combo.c Ditto.
	* controls/edit.c Ditto.
	* controls/icontitle.c Ditto.
	* controls/listbox.c Ditto.
	* controls/static.c Ditto.
	* windows/dialog.c Ditto.
	* windows/mdi.c Ditto.
	* windows/menu.c Ditto.
	* windows/defwnd.c Fixed WM_GETTEXT error handling in DefWindowProcW().

2003-10-06  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* Makefile: New target uboot for simple unattended setup.
	* bootdata/unattend.inf.sample: Sample unattended setup script.
	* subsys/system/usetup/partlist.c (SelectPartition): New function.